--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Fundamentals</h1>
     <img src="">
-    <script src="fetch-5.js"></script>
+    <script src="original.js"></script>
 </body>
 </html>
